--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "creator_universe_api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
